--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-static": "^0.7.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
