--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "json-server": "^0.17.0",
+    "lodash": "^4.17.21",
     "node-static": "^0.7.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 5500",
+    "server": "exec ./runbe.sh",
+    "jsonserver": "json-server --watch db.json --port 5500",
     "delayserver": "json-server --watch db.json --delay 500 --port 5500"
   },
   "eslintConfig": {
