--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-static": "^0.7.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
