--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
